--- a/mediation-library/src/main/res/layout/mdl_native_ad_view.xml
+++ b/mediation-library/src/main/res/layout/mdl_native_ad_view.xml
@@ -143,16 +143,19 @@
 
                 <TextView
                     android:id="@+id/native_cta"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
-                    android:background="@drawable/mdl_bg_cta"
+                    android:background="@drawable/mdl_bg_ad_loading"
                     android:gravity="center"
                     android:padding="12dp"
+                    android:textAlignment="center"
                     android:textAllCaps="true"
                     android:textColor="@android:color/white"
                     android:textSize="14sp"
                     app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/native_ad_body"
                     tools:text="Install" />
             </androidx.constraintlayout.widget.ConstraintLayout>
