--- a/mediation-library/src/main/res/layout/mdl_native_ad_view.xml
+++ b/mediation-library/src/main/res/layout/mdl_native_ad_view.xml
@@ -105,7 +105,7 @@
 
                 <TextView
                     android:id="@+id/native_ad_title"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="8dp"
                     android:layout_marginRight="8dp"
@@ -124,7 +124,7 @@
 
                 <TextView
                     android:id="@+id/native_ad_body"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
                     android:layout_marginEnd="8dp"
@@ -139,7 +139,6 @@
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/native_ad_title"
                     tools:ignore="HardcodedText" />
-
 
                 <TextView
                     android:id="@+id/native_cta"
