--- a/mediation-native-template/src/main/res/layout/mdl_template_default.xml
+++ b/mediation-native-template/src/main/res/layout/mdl_template_default.xml
@@ -152,6 +152,7 @@
                     android:textAllCaps="true"
                     android:textColor="@android:color/white"
                     android:textSize="14sp"
+                    android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
